--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.1.1"
   },
   "dependencies": {
+    "flexboxgrid": "^6.2.0",
     "hexo": "^3.1.0",
     "hexo-deployer-git": "0.0.4",
     "hexo-generator-archive": "^0.1.2",
