add appier preface

--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "5.4.0"
   },
   "dependencies": {
     "flexboxgrid": "^6.2.0",
-    "hexo": "^3.1.0",
-    "hexo-deployer-git": "0.0.4",
+    "hexo": "^5.4.0",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^0.1.2",
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-index": "^0.1.2",
     "hexo-generator-tag": "^0.1.1",
     "hexo-renderer-ejs": "^0.1.0",
-    "hexo-renderer-marked": "^0.2.5",
+    "hexo-renderer-marked": "^4.1.0",
     "hexo-renderer-stylus": "^0.3.0",
     "hexo-server": "^0.1.2"
   }
